--- a/themes/nico/assets/css/login.css
+++ b/themes/nico/assets/css/login.css
@@ -179,6 +179,8 @@ body {
     display: inline-block; }
   .logo-lg {
     height: 80px; }
+  .logo-lg {
+    height: 80px; }
   .login-card form {
     max-width: 100%; }
   .login-card .login-btn {
