--- a/themes/nico/assets/css/styles.css
+++ b/themes/nico/assets/css/styles.css
@@ -739,7 +739,7 @@ screen and (-ms-high-contrast: none) {
 /*********************/
 .header {
 	width: 100%;
-	height: 850px;
+	/* height: 850px; */
 }
 
 .header .header-content {
