--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -8,6 +8,14 @@ Dashboard UI
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+html, body {
+  height: auto !important;
+  overflow: auto !important;
+}
+
+body {
+  position: static !important;
+}
 :root {
   --blue: #467fcf;
   --indigo: #6574cd;
